Fixing Relative PermaLinks.

--- a/gallery/experiments/index.html
+++ b/gallery/experiments/index.html
@@ -67,7 +67,7 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
-     <a href="http://example.org/gallery/experiments/selfportraiture/">
+     <a href="/gallery/experiments/selfportraiture/">
       <img src="/img/gallery/selfportraiture/SP04.jpg" loading="lazy" >
       <div>
        <h2 class="small-margin-bottom">Self Portraiture</h2>
@@ -78,7 +78,7 @@
      </div>
     
         <div class="main-box list-box">
-     <a href="http://example.org/gallery/experiments/lowres/">
+     <a href="/gallery/experiments/lowres/">
       <img src="/img/gallery/lowres/LR01.jpg" loading="lazy" >
       <div>
        <h2 class="small-margin-bottom">Low Resolution</h2>
@@ -89,7 +89,7 @@
      </div>
     
         <div class="main-box list-box">
-     <a href="http://example.org/gallery/experiments/light/">
+     <a href="/gallery/experiments/light/">
       <img src="/img/gallery/light/LI03.jpg" loading="lazy" >
       <div>
        <h2 class="small-margin-bottom">Light</h2>
@@ -102,9 +102,9 @@
    </div>
  </div>
   </article>
-
+/gallery/experiments/
   <div class="back">
-   <a class="rounded" href="http://example.org/gallery/">〈 Back to  Gallery </a>
+   <a class="rounded" href="/gallery/">〈 Back to  Gallery </a>
   </div>
   
  </main>
