--- a/gallery/index.html
+++ b/gallery/index.html
@@ -67,7 +67,7 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
-     <a href="http://example.org/gallery/trichrome/">
+     <a href="/gallery/trichrome/">
       <img src="/img/gallery/trichrome/summer/TC01.jpg" loading="lazy" >
       <div>
        <h2 class="small-margin-bottom">Trichrome</h2>
@@ -78,7 +78,7 @@
      </div>
     
         <div class="main-box list-box">
-     <a href="http://example.org/gallery/places/">
+     <a href="/gallery/places/">
       <img src="/img/gallery/trichrome/summer/TC07.jpg" loading="lazy" >
       <div>
        <h2 class="small-margin-bottom">Places</h2>
@@ -89,7 +89,7 @@
      </div>
     
         <div class="main-box list-box">
-     <a href="http://example.org/gallery/experiments/">
+     <a href="/gallery/experiments/">
       <img src="/img/gallery/light/LI03.jpg" loading="lazy" >
       <div>
        <h2 class="small-margin-bottom">Experiments</h2>
@@ -102,9 +102,9 @@
    </div>
  </div>
   </article>
-
+/gallery/
   <div class="back">
-   <a class="rounded" href="http://example.org/">〈 Back to  Home </a>
+   <a class="rounded" href="/">〈 Back to  Home </a>
   </div>
   
  </main>
