--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -67,7 +67,7 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
-     <a href="http://example.org/knowledge/origami/">
+     <a href="/knowledge/origami/">
       <img src="/img/knowledge/origami_3.jpg" loading="lazy" >
       <div>
        <h2 class="small-margin-bottom">Origami</h2>
@@ -78,7 +78,7 @@
      </div>
     
         <div class="main-box list-box">
-     <a href="http://example.org/knowledge/trichrome/">
+     <a href="/knowledge/trichrome/">
       <img src="/img/gallery/trichrome/summer/TC10.jpg" loading="lazy" >
       <div>
        <h2 class="small-margin-bottom">Trichrome Technique</h2>
@@ -89,7 +89,7 @@
      </div>
     
         <div class="main-box list-box">
-     <a href="http://example.org/knowledge/beachfossils/">
+     <a href="/knowledge/beachfossils/">
       <img src="/img/knowledge/beachfossils_2.jpg" loading="lazy" >
       <div>
        <h2 class="small-margin-bottom">Beach Fossils</h2>
@@ -104,7 +104,7 @@
   </article>
 
   <div class="back">
-   <a class="rounded" href="http://example.org/">〈 Back to  Home </a>
+   <a class="rounded" href="/">〈 Back to  Home </a>
   </div>
   
  </main>
