--- a/gallery/places/index.html
+++ b/gallery/places/index.html
@@ -69,9 +69,9 @@
    </div>
  </div>
   </article>
-
+/gallery/places/
   <div class="back">
-   <a class="rounded" href="http://example.org/gallery/">〈 Back to  Gallery </a>
+   <a class="rounded" href="/gallery/">〈 Back to  Gallery </a>
   </div>
   
  </main>
