Fixing Relative PermaLinks.

--- a/projects/index.html
+++ b/projects/index.html
@@ -126,7 +126,7 @@
   </article>
 
   <div class="back">
-   <a class="rounded" href="http://example.org/">〈 Back to  Home </a>
+   <a class="rounded" href="/">〈 Back to  Home </a>
   </div>
   
  </main>
