--- a/projects/virtual-gallery/index.html
+++ b/projects/virtual-gallery/index.html
@@ -91,7 +91,7 @@
 <p> </p>
 
     <div class="back">
-     <a class="rounded" href="http://example.org/projects/">〈 Back to Projects</a>
+     <a class="rounded" href="/projects/">〈 Back to Projects</a>
    </div>
   </main>
  </body>
