--- a/projects/origami-designs/index.html
+++ b/projects/origami-designs/index.html
@@ -92,7 +92,7 @@
 <p> </p>
 
     <div class="back">
-     <a class="rounded" href="http://example.org/projects/">〈 Back to Projects</a>
+     <a class="rounded" href="/projects/">〈 Back to Projects</a>
    </div>
   </main>
  </body>
