--- a/projects/streetwalker/index.html
+++ b/projects/streetwalker/index.html
@@ -94,7 +94,7 @@
 <p> </p>
 
     <div class="back">
-     <a class="rounded" href="http://example.org/projects/">〈 Back to Projects</a>
+     <a class="rounded" href="/projects/">〈 Back to Projects</a>
    </div>
   </main>
  </body>
