added Lough Derg photos

--- a/gallery/places/index.html
+++ b/gallery/places/index.html
@@ -66,6 +66,17 @@
    <div class="flex-box">
     <div class="columns-2">
    
+        <div class="main-box list-box">
+     <a href="/gallery/places/loughderg/">
+      <img src="" loading="lazy" >
+      <div>
+       <h2 class="small-margin-bottom">Lough Derg</h2>
+       <p>Trichrome photos taken in the idyllic Lough Derg</p>
+       </div>
+       <hr>
+      </a>
+     </div>
+    
    </div>
  </div>
   </article>
