--- a/gallery/places/index.html
+++ b/gallery/places/index.html
@@ -68,7 +68,7 @@
    
         <div class="main-box list-box">
      <a href="/gallery/places/loughderg/">
-      <img src="" loading="lazy" >
+      <img src="/img/gallery/places/loughderg01.jpg" loading="lazy" >
       <div>
        <h2 class="small-margin-bottom">Lough Derg</h2>
        <p>Trichrome photos taken in the idyllic Lough Derg</p>
