I forgot to tell hugo what the base URL was

--- a/gallery/trichrome/index.html
+++ b/gallery/trichrome/index.html
@@ -3,7 +3,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="alternate" type="application/rss+xml" href="http://example.org/gallery/trichrome/index.xml" title="D00k" />
+    <link rel="alternate" type="application/rss+xml" href="https://d00k.net/gallery/trichrome/index.xml" title="D00k" />
     <link rel="stylesheet" href="/css/style.css">
 <link rel="shortcut icon" href="/img/assets/favicon.ico">
 
