Added new pages

--- a/about/music/index.html
+++ b/about/music/index.html
@@ -62,7 +62,15 @@
     <h1 class="title">Music</h1>
      
      <hr>
-    
+    <h2 id="currently-listening-to">Currently listening to</h2>
+<p>• Various Studio Ghibli soundtracks by Joe Hisaihi.
+• Dreamgirl, for some lo fi vibes.
+• Citypop compilations from Youtube.</p>
+<p>  </p>
+<h2 id="music-notes">Music Notes</h2>
+<p>Currently, I&rsquo;m beginning a journey to move away from Spotify. I&rsquo;ve begun buying an album a month on Bandcamp, as well as buying CDs when I can (second hand stores are great). I&rsquo;m hoping to purchase an iPod Classic for portable music, it might become a project as well to add some mods like flash storage.</p>
+<p> </p>
+
     <div class="back">
      <a class="rounded" href="/about">〈 Back to About</a>
    </div>
