--- a/gallery/places/loughderg/index.html
+++ b/gallery/places/loughderg/index.html
@@ -73,8 +73,18 @@
     <p>
  <figure>
  	<div>
-     <img src="/img/gallery/places/loughderg01.jpg" loading="lazy" alt="Lake View 1">
-     <figcaption>Lake View 1</figcaption>
+     <img src="/img/gallery/places/loughderg02.jpg" loading="lazy" alt="Dromineer Marina with castle backdrop">
+     <figcaption>Dromineer Marina</figcaption>
+     <hr>
+ 	</div>
+ </figure>
+ 
+I spent a week around Lough Derg in March 2022. Staying in Dromineer, the village was host to a decently sized Marina, a castle ruins as well as a 10th century church. The area surrounding the lake are full of forest trails and castles galore. The roads in the locality are part of a larger cycling trail.</p>
+<p>
+ <figure>
+ 	<div>
+     <img src="/img/gallery/places/loughderg03.jpg" loading="lazy" alt="Dromineer Castle 01">
+     <figcaption>Dromineer Castle 01</figcaption>
      <hr>
  	</div>
  </figure>
@@ -82,8 +92,8 @@
 <p>
  <figure>
  	<div>
-     <img src="/img/gallery/places/loughderg02.jpg" loading="lazy" alt="Lake View 2">
-     <figcaption>Lake View 2</figcaption>
+     <img src="/img/gallery/places/loughderg04.jpg" loading="lazy" alt="Dromineer Castle 02">
+     <figcaption>Dromineer Castle 02</figcaption>
      <hr>
  	</div>
  </figure>
@@ -91,8 +101,8 @@
 <p>
  <figure>
  	<div>
-     <img src="/img/gallery/places/loughderg03.jpg" loading="lazy" alt="Mossy Log 1">
-     <figcaption>Mossy Log 1</figcaption>
+     <img src="/img/gallery/places/loughderg05.jpg" loading="lazy" alt="Thatched Cottage">
+     <figcaption>Thatched Cottage</figcaption>
      <hr>
  	</div>
  </figure>
@@ -100,8 +110,8 @@
 <p>
  <figure>
  	<div>
-     <img src="/img/gallery/places/loughderg04.jpg" loading="lazy" alt="Mossy Log 2">
-     <figcaption>Mossy Log 2</figcaption>
+     <img src="/img/gallery/places/loughderg06.jpg" loading="lazy" alt="Lough Derg">
+     <figcaption>Lough Derg</figcaption>
      <hr>
  	</div>
  </figure>
@@ -109,35 +119,8 @@
 <p>
  <figure>
  	<div>
-     <img src="/img/gallery/places/loughderg05.jpg" loading="lazy" alt="Mossy Log 3">
-     <figcaption>Mossy Log 3</figcaption>
-     <hr>
- 	</div>
- </figure>
- </p>
-<p>
- <figure>
- 	<div>
-     <img src="/img/gallery/places/loughderg06.jpg" loading="lazy" alt="Boulder 1">
-     <figcaption>Boulder 1</figcaption>
-     <hr>
- 	</div>
- </figure>
- </p>
-<p>
- <figure>
- 	<div>
-     <img src="/img/gallery/places/loughderg07.jpg" loading="lazy" alt="Boulder 2">
-     <figcaption>Boulder 2</figcaption>
-     <hr>
- 	</div>
- </figure>
- </p>
-<p>
- <figure>
- 	<div>
-     <img src="/img/gallery/places/loughderg08.jpg" loading="lazy" alt="Boulder 3">
-     <figcaption>Boulder 3</figcaption>
+     <img src="/img/gallery/places/loughderg01.jpg" loading="lazy" alt="The Boathouse">
+     <figcaption>The Boathouse</figcaption>
      <hr>
  	</div>
  </figure>
