--- a/gallery/places/loughderg/index.html
+++ b/gallery/places/loughderg/index.html
@@ -78,8 +78,8 @@
      <hr>
  	</div>
  </figure>
- 
-I spent a week around Lough Derg in March 2022. Staying in Dromineer, the village was host to a decently sized Marina, a castle ruins as well as a 10th century church. The area surrounding the lake are full of forest trails and castles galore. The roads in the locality are part of a larger cycling trail.</p>
+ </p>
+<p>I spent a week around Lough Derg in March 2022. Staying in Dromineer, the village was host to a decently sized Marina, a castle ruins as well as a 10th century church. The area surrounding the lake are full of forest trails and castles galore. The roads in the locality are part of a larger cycling trail.</p>
 <p>
  <figure>
  	<div>
