--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -67,6 +67,17 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
+     <a href="/knowledge/ecovillage/">
+      <img src="" loading="lazy" >
+      <div>
+       <h2 class="small-margin-bottom">Ecovillage</h2>
+       <p></p>
+       </div>
+       <hr>
+      </a>
+     </div>
+    
+        <div class="main-box list-box">
      <a href="/knowledge/origami/">
       <img src="/img/knowledge/origami_3.jpg" loading="lazy" >
       <div>
