--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -68,10 +68,10 @@
    
         <div class="main-box list-box">
      <a href="/knowledge/ecovillage/">
-      <img src="" loading="lazy" >
+      <img src="/img/knowledge/ecovillage06.jpg" loading="lazy" >
       <div>
-       <h2 class="small-margin-bottom">Ecovillage</h2>
-       <p></p>
+       <h2 class="small-margin-bottom">Ecovillages</h2>
+       <p>Record of my visit around Cloughjordan Ecovillage.</p>
        </div>
        <hr>
       </a>
