Added Reusing tech page

--- a/about/now/index.html
+++ b/about/now/index.html
@@ -71,17 +71,18 @@
       
      <hr>
     <p> </p>
-<h2 id="march-2022">March 2022</h2>
+<h2 id="april-2022">April 2022</h2>
 <p>∙ Learning digital art using Krita.</p>
-<p>∙ Doing a big clean-out of everything I own.</p>
-<p>∙ Hopefully picking up where I left off learning the Linux Command Line.</p>
-<p>∙ Heading on my first break away in years, hoping to get some nice shots in a new environment.</p>
+<p>∙ Modifying an iPod Classic.</p>
+<p>∙ Working on a Minecraft Museum.</p>
+<p>∙ Burning loads of CDs to Digital for my music collection.</p>
+<p>∙ Mostly taking the month to rest and get back on my toes after a terrible health month.</p>
 <p> </p>
 <p> </p>
 <h2 id="whats-playing">What&rsquo;s Playing?</h2>
-<p>∙ Vibing to Japanese 80&rsquo;s City Pop music.</p>
-<p>∙ Re-watching Full Metal Alchemist Brotherhood.</p>
-<p>∙ Playing Pokemon Legends Arceus.</p>
+<p>∙ Vibing to Yot Club&rsquo;s album, Bipolar.</p>
+<p>∙ Re-watching some Ghibli movies.</p>
+<p>∙ Still playing Pokemon Legends Arceus.</p>
 <p> </p>
 
     <div class="back">
