--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -67,6 +67,17 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
+     <a href="/knowledge/reusingtech/">
+      <img src="/img/knowledge/reusingtech02.jpg" loading="lazy" >
+      <div>
+       <h2 class="small-margin-bottom">Reusing Technology</h2>
+       <p>Tips and Tricks about reusing technology in fun and useful ways.</p>
+       </div>
+       <hr>
+      </a>
+     </div>
+    
+        <div class="main-box list-box">
      <a href="/knowledge/ecovillage/">
       <img src="/img/knowledge/ecovillage06.jpg" loading="lazy" >
       <div>
