Updated download information

--- a/projects/adwaitapod/index.html
+++ b/projects/adwaitapod/index.html
@@ -104,6 +104,8 @@
 <ul class="extra">
 <li>∘ Fonts with CJK support, including full theme downloads including them.</li>
 
+<li>∘ Releases with settings for smooth scrolling text (can't be uploaded to Rockbox).</li>
+
 <li>∘ Copies of the theme's code with labelling.</li>
 
 <li>∘ Inkscape SVG files of every individual screen in the theme.</li>
@@ -114,16 +116,26 @@
 
 <ul class="extra">
 	<li>
-	   <a href="" target="_blank" rel="noreferrer">⬩ Rockbox Theme page</a>.
+	   <a href="https://github.com/D0-0K/adwaitapod/releases/download/v.1/adwaitapod.zip" target="_blank" rel="noreferrer">⬩ Adwaitapod download</a>.
 	</li>
 
 	<li>
-	   <a href="" target="_blank" rel="noreferrer">⬩ Rockbox Dark Theme page</a>.
+	   <a href="https://github.com/D0-0K/adwaitapod/releases/download/v.1/adwaitapod_dark.zip" target="_blank" rel="noreferrer">⬩ Adwaitapod Dark download</a>.
 	</li>
+
+<hr>
+
 
 	<li>
 	   <a href="https://github.com/D0-0K/adwaitapod" target="_blank" rel="noreferrer">⬩ Github Repository</a>.
 	</li>
+	<li>
+	   <a href="https://themes.rockbox.org/index.php?themeid=3275&amp;target=ipodvideo" target="_blank" rel="noreferrer">⬩ Rockbox Theme page</a>.
+	</li>
+	<li>
+	   <a href="https://themes.rockbox.org/index.php?themeid=3274&amp;target=ipodvideo" target="_blank" rel="noreferrer">⬩ Rockbox Dark Theme page</a>.
+	</li>
+
 </ul>
 
 <h2 id="gallery">Gallery</h2>
