Updates for July 2022

--- a/about/now/index.html
+++ b/about/now/index.html
@@ -62,28 +62,26 @@
    <main class="no-top">
     <h1 class="title">Now</h1>
      <hr>
-    <h2 id="june-2022">June 2022</h2>
+    <h2 id="july-2022">July 2022</h2>
 
 
 <ul class="extra">
-<li>∘ Finishing up my Rockbox theme for release.</li>
+<li>∘ Learning C with "Learning C for Pebble".</li>
 
-<li>∘ Updating and upgrading the website.</li>
+<li>∘ Begin prepping an Origami zine.</li>
 
-<li>∘ Writing a guide to Rockbox theming.</li>
+<li>∘ Maybe work out starting developing android widgets for an app idea.</li>
 
-<li>∘ Hoping to take some more time to read this month.</li>
+<li>∘ Actually read for real this month.</li>
 </ul>
 
 <h2 id="whats-playing">What&rsquo;s Playing?</h2>
 
 
 <ul class="extra">
-<li>∘ Vibing to Invitation to Her's by Her's.
+<li>∘ Listening to "Walking in the Rain" by Funkmammoth.
 
-<li>∘ Watching the entirety of Adventure Time.
-
-<li>∘ Enjoying the new Minecraft update with my friends.
+<li>∘ Finishing reading Sket-Dance.
 </ul>
 
 <p><a href="./2022">∙ now 2022</a></p>
