Fixed active menu function

--- a/projects/index.html
+++ b/projects/index.html
@@ -21,30 +21,35 @@
 </ul>
   <ul role="list">
   
+   
     <li>
       <a class="" href="/gallery/">
         Gallery
       </a>
     </li>
   
+   
     <li>
-      <a class="" href="/projects/">
+      <a class="active" href="/projects/">
         Projects
       </a>
     </li>
   
+   
     <li>
       <a class="" href="/knowledge/">
         Knowledge
       </a>
     </li>
   
+   
     <li>
       <a class="" href="/journal/">
         Journal
       </a>
     </li>
   
+   
     <li>
       <a class="" href="/about/">
         About
@@ -52,7 +57,7 @@
     </li>
    
 </ul>
-</nav>
+</nav> 
 </div>
 
   </header>
