--- a/about/music/index.html
+++ b/about/music/index.html
@@ -21,38 +21,43 @@
 </ul>
   <ul role="list">
   
+   
     <li>
       <a class="" href="/gallery/">
         Gallery
       </a>
     </li>
   
+   
     <li>
       <a class="" href="/projects/">
         Projects
       </a>
     </li>
   
+   
     <li>
       <a class="" href="/knowledge/">
         Knowledge
       </a>
     </li>
   
+   
     <li>
       <a class="" href="/journal/">
         Journal
       </a>
     </li>
   
+   
     <li>
-      <a class="" href="/about/">
+      <a class="active" href="/about/">
         About
       </a>
     </li>
    
 </ul>
-</nav>
+</nav> 
 </div>
 
   </header>
