--- a/journal/year-review-2021/index.html
+++ b/journal/year-review-2021/index.html
@@ -20,30 +20,35 @@
 </ul>
   <ul role="list">
   
+   
     <li>
       <a class="" href="/gallery/">
         Gallery
       </a>
     </li>
   
+   
     <li>
       <a class="" href="/projects/">
         Projects
       </a>
     </li>
   
+   
     <li>
       <a class="" href="/knowledge/">
         Knowledge
       </a>
     </li>
   
+   
     <li>
-      <a class="" href="/journal/">
+      <a class="active" href="/journal/">
         Journal
       </a>
     </li>
   
+   
     <li>
       <a class="" href="/about/">
         About
@@ -51,7 +56,7 @@
     </li>
    
 </ul>
-</nav>
+</nav> 
 </div>
 
   </header>
