--- a/about/index.html
+++ b/about/index.html
@@ -104,7 +104,11 @@
 <h2 id="further-reading" style="margin-top:35px;">Further Reading</h2>
 <ul class="extra">
 	<li>
-	   <a href="./now/">∙ Now - What I&#39;m up to</a>.
+	   <a href="./now/">∙ Now - This month&#39;s plans</a>.
+	</li>
+
+	<li>
+	   <a href="./shortjournal/">∙ Short Journal - What I&#39;m up to</a>.
 	</li>
 
 	<li>
