Added Journal section

--- a/about/shortjournal/2022-07-05/index.html
+++ b/about/shortjournal/2022-07-05/index.html
@@ -67,7 +67,7 @@
     <h1 class="title">2022 07 05</h1>
      
      <hr>
-    <p>Felt inspired to create a short form journal for the site! Excited to write more in it, hopefully this will also encourage me to update the site more. :3</p>
+    <p>Felt inspired to create a short form journal for the site after seeing some people on Mastodon doing the same. Excited to write more in it, hopefully this will also encourage me to update the site more! :3</p>
 
   <div class="back">
    <a class="rounded" href="/about/shortjournal/">〈 Back to  Dook&#39;s Journal </a>
