adding new journal entry

--- a/about/shortjournal/index.html
+++ b/about/shortjournal/index.html
@@ -69,6 +69,15 @@
      <hr>
     
     <article>
+	<h2>2022-07-06</h2>
+	<p>I&rsquo;ve gotten interested this week in propagating seeds from wildflowers in our garden. There&rsquo;s a beautiful pink poppy with massive seed pods, as well as a bunch of bluebells that I&rsquo;d love to spread to other places. I was considering drying and saving the seed, following <a href="https://realseeds.co.uk/seedsavinginfo.html" target="_blank" rel="noopener">this</a> guide from realseeds, however I don&rsquo;t think there&rsquo;s much reason to in this situation. :3</p>
+
+</article>
+<hr style="width: 25%;">
+
+
+    
+    <article>
 	<h2>2022-07-05</h2>
 	<p>Felt inspired to create a short form journal for the site after seeing some people on Mastodon doing the same. Excited to write more in it, hopefully this will also encourage me to update the site more! :3</p>
 
