added new journal entry

--- a/about/shortjournal/2022-07-07/index.html
+++ b/about/shortjournal/2022-07-07/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/style.css">
 <link rel="shortcut icon" href="/img/assets/favicon.ico">
 
-    <title>2022 07 06</title>
+    <title>2022 07 07</title>
  </head>
   <header>
 
@@ -64,10 +64,10 @@
  
  <body class="about">
    <main class="no-top">
-    <h1 class="title">2022 07 06</h1>
+    <h1 class="title">2022 07 07</h1>
      
      <hr>
-    <p>I&rsquo;ve gotten interested this week in propagating seeds from wildflowers in our garden. There&rsquo;s a beautiful pink poppy with massive seed pods, as well as a bunch of bluebells that I&rsquo;d love to spread to other places. I was considering drying and saving the seed, following <a href="https://realseeds.co.uk/seedsavinginfo.html" target="_blank" rel="noopener">this</a> guide from realseeds, however I don&rsquo;t think there&rsquo;s much reason to in this situation.</p>
+    <p>Had some really hot weather today, spent most of the day in and out between the garden and my laptop. Started work designing a typeface for pebble watches based on their icon style. Looking to convert it into a watchface soon.</p>
 
   <div class="back">
    <a class="rounded" href="/about/shortjournal/">〈 Back to  Dook&#39;s Journal </a>
