--- a/about/shortjournal/index.html
+++ b/about/shortjournal/index.html
@@ -69,8 +69,17 @@
      <hr>
     
     <article>
+	<h2>2022-07-07</h2>
+	<p>Had some really hot weather today, spent most of the day in and out between the garden and my laptop. Started work designing a typeface for pebble watches based on their icon style. Looking to convert it into a watchface soon.</p>
+
+</article>
+<hr style="width: 25%;">
+
+
+    
+    <article>
 	<h2>2022-07-06</h2>
-	<p>I&rsquo;ve gotten interested this week in propagating seeds from wildflowers in our garden. There&rsquo;s a beautiful pink poppy with massive seed pods, as well as a bunch of bluebells that I&rsquo;d love to spread to other places. I was considering drying and saving the seed, following <a href="https://realseeds.co.uk/seedsavinginfo.html" target="_blank" rel="noopener">this</a> guide from realseeds, however I don&rsquo;t think there&rsquo;s much reason to in this situation. :3</p>
+	<p>I&rsquo;ve gotten interested this week in propagating seeds from wildflowers in our garden. There&rsquo;s a beautiful pink poppy with massive seed pods, as well as a bunch of bluebells that I&rsquo;d love to spread to other places. I was considering drying and saving the seed, following <a href="https://realseeds.co.uk/seedsavinginfo.html" target="_blank" rel="noopener">this</a> guide from realseeds, however I don&rsquo;t think there&rsquo;s much reason to in this situation.</p>
 
 </article>
 <hr style="width: 25%;">
