new journal entry

--- a/about/shortjournal/index.html
+++ b/about/shortjournal/index.html
@@ -69,6 +69,15 @@
      <hr>
     
     <article>
+	<h2>2022-07-12</h2>
+	<p>Without even realising it, I went on a bit of an internet detox this weekend. My phone&rsquo;s gone almost 50 hours on a single charge, which is pretty good. I spent most of the weekend between working on some new design projects and watching the wildlife in our garden. It&rsquo;s really become a sanctuary for so many different kinds of species, I even found a threatened leaf-cutter bee building a nest which was amazing to watch. I&rsquo;m somewhat reluctant to return to social media yet, I think I&rsquo;ll keep riding this wave for a while longer.</p>
+
+</article>
+<hr style="width: 25%;">
+
+
+    
+    <article>
 	<h2>2022-07-07</h2>
 	<p>Had some really hot weather today, spent most of the day in and out between the garden and my laptop. Started work designing a typeface for pebble watches based on their icon style. Looking to convert it into a watchface soon.</p>
 
