Added Bee Section

--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -72,6 +72,17 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
+     <a href="/knowledge/bees/">
+      <img src="" loading="lazy" >
+      <div>
+       <h2 class="small-margin-bottom">Bee Encyclopedia</h2>
+       <p>An Encylopedia of various Bees I&#39;ve spotted, and photgraphed.</p>
+       </div>
+       <hr>
+      </a>
+     </div>
+    
+        <div class="main-box list-box">
      <a href="/knowledge/ipod_modding/">
       <img src="/img/knowledge/ipod_modding/ipod.svg" loading="lazy" >
       <div>
