--- a/about/now/index.html
+++ b/about/now/index.html
@@ -73,11 +73,11 @@
 <ul class="extra">
 <li>∘ Learning C with "Learning C for Pebble".</li>
 
-<li>∘ Begin prepping an Origami zine.</li>
+<li>∘ Designing various watchfaces and typefaces for Pebble dev.</li>
 
-<li>∘ Maybe work out starting developing android widgets for an app idea.</li>
+<li>∘ Learning about working with and managing servers.</li>
 
-<li>∘ Actually read for real this month.</li>
+<li>∘ Started drawing a bit more.</li>
 </ul>
 
 <h2 id="whats-playing">What&rsquo;s Playing?</h2>
