--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
        </div>
       </div>
        <ul class="small-margin-top">
+        <li><a href="/knowledge/bees/">Bee Encyclopedia</a></li>
         <li><a href="/knowledge/ipod_modding/font_combining">Font Combining</a></li>
          <li><a href="/knowledge/ipod_modding/rockbox_theming">Rockbox Theming</a></li>
-         <li><a href="/knowledge/reusingtech/">Reusing Technology</a></li>
        </ul>
       <a class="rounded see-more" href="/knowledge/">See More</a>
      </div>
