--- a/guides/rockbox/index.html
+++ b/guides/rockbox/index.html
@@ -70,6 +70,11 @@
   <hr>
   
     <p>
+     <a href="/knowledge/ipod_modding/rockbox_theming/conclusion/">∙ Conclusion</a>
+    </p>
+
+   
+    <p>
      <a href="/knowledge/ipod_modding/rockbox_theming/unused_functions/">∙ 4. Unused Functions</a>
     </p>
 
