added more bees

--- a/knowledge/bees/index.html
+++ b/knowledge/bees/index.html
@@ -139,7 +139,7 @@
 <h2 id="early-bumble-bee">Early Bumble Bee</h2>
 <figure>
  	<div>
-     <img src="/img/knowledge/bees02.jpg" loading="lazy" alt="A large, Black bee sitting on a purple flower">
+     <img src="/img/knowledge/bees02.jpg" loading="lazy" alt="A medium sized black bee with two bright yellow stripes on a white flower">
      <figcaption>Bombus (Melanobombus) lapidarius</figcaption>
      <hr>
  	</div>
@@ -153,6 +153,48 @@
 	</li>
 	<li>
 	   <a href="https://eol.org/pages/1065201" target="_blank" rel="noreferrer">⬩ EOL Profile</a>.
+	</li>
+</ul>
+</p>
+<hr>
+<h2 id="white-tailed-bumble-bee">White-tailed Bumble Bee</h2>
+<figure>
+ 	<div>
+     <img src="/img/knowledge/bees06.jpg" loading="lazy" alt="A large, Black bee with yellow stripes and white bottom hanging onto flowers">
+     <figcaption>Bombus (Bombus) lucorum</figcaption>
+     <hr>
+ 	</div>
+ </figure>
+<p>  These bright bees are commonly found all over Ireland almost all year round. The workers of the B.locorum and the B.terrestris species are impossible to tell apart by the eye, however if you see this bee it is most likely a Bombus locorum. The Males of this species have a lot more yellow on their bodies than Females, and are striking in appearance.
+
+
+<ul class="extra">
+	<li>
+	   <a href="https://species.biodiversityireland.ie/profile.php?taxonId=55973&amp;keyword=Bees" target="_blank" rel="noreferrer">⬩ Irish Biodiversity Data Centre Profile</a>.
+	</li>
+	<li>
+	   <a href="https://eol.org/pages/1065136" target="_blank" rel="noreferrer">⬩ EOL Profile</a>.
+	</li>
+</ul>
+</p>
+<hr>
+<h2 id="common-carder-bee">Common Carder Bee</h2>
+<figure>
+ 	<div>
+     <img src="/img/knowledge/bees05.jpg" loading="lazy" alt="A soft, small orange bee in a white apple tree flower">
+     <figcaption>Bombus (Thoracombus) pascuorum</figcaption>
+     <hr>
+ 	</div>
+ </figure>
+<p>  Likely the most common bee species in Ireland, these small fellas can be seen year-round hanging out in whatever is blooming. Their characteristic ginger thorax makes them very easy to spot and identify. These ginger hairs can become faded or bleached by the sun which sometimes make them look similar to the Large carder bee. These small bees nest in surface litter.
+
+
+<ul class="extra">
+	<li>
+	   <a href="https://species.biodiversityireland.ie/profile.php?taxonId=56027&amp;keyword=Bees" target="_blank" rel="noreferrer">⬩ Irish Biodiversity Data Centre Profile</a>.
+	</li>
+	<li>
+	   <a href="https://eol.org/pages/1065209" target="_blank" rel="noreferrer">⬩ EOL Profile</a>.
 	</li>
 </ul>
 </p>
