--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -73,7 +73,7 @@
    
         <div class="main-box list-box">
      <a href="/knowledge/bees/">
-      <img src="" loading="lazy" >
+      <img src="/img/knowledge/bees05.jpg" loading="lazy" >
       <div>
        <h2 class="small-margin-bottom">Bee Encyclopedia</h2>
        <p>An Encylopedia of various Bees I&#39;ve spotted, and photgraphed.</p>
