added seed harvesting page

--- a/knowledge/bees/index.html
+++ b/knowledge/bees/index.html
@@ -204,7 +204,7 @@
 
 <ul class="extra">
 	<li>
-	   <a href="https://pollinators.ie/record-pollinators/bees/" target="_blank" rel="noreferrer">⬩ Irish Biodivesity Data Centre</a>.
+	   <a href="https://pollinators.ie/record-pollinators/bees/" target="_blank" rel="noreferrer">⬩ Irish Biodiversity Data Centre</a>.
 	</li>
 	<li>
 	   <a href="https://biodiversityireland.ie/identifying-irish-bumblebees/lesson.html" target="_blank" rel="noreferrer">⬩ Bumble Bee Identification Guide</a>.
