--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -72,6 +72,17 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
+     <a href="/knowledge/seedharvesting/">
+      <img src="/img/knowledge/savingseeds01.jpg" loading="lazy" >
+      <div>
+       <h2 class="small-margin-bottom">Seed Harvesting</h2>
+       <p>A record of harvesting seeds, when to pick and how I store them.</p>
+       </div>
+       <hr>
+      </a>
+     </div>
+    
+        <div class="main-box list-box">
      <a href="/knowledge/bees/">
       <img src="/img/knowledge/bees05.jpg" loading="lazy" >
       <div>
