Added Pebble icons

--- a/projects/index.html
+++ b/projects/index.html
@@ -72,6 +72,17 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
+     <a href="/projects/rebble_weather/">
+      <img src="/img/projects/rebbleweather04.jpg" loading="lazy" >
+      <div>
+       <h2 class="small-margin-bottom">Rebble Weather Icons</h2>
+       <p>Reinventing the Pebble weather icons for use in the Rebble project.</p>
+       </div>
+       <hr>
+      </a>
+     </div>
+    
+        <div class="main-box list-box">
      <a href="/projects/adwaitapod/">
       <img src="/img/projects/adwaitapod01.jpg" loading="lazy" >
       <div>
