added new mastodon link

--- a/about/index.html
+++ b/about/index.html
@@ -83,13 +83,13 @@
 <div class="box-text small-padding-right">
        <img class="contacticons" src="/img/about/mastodon.svg">
         <div class="contactlist">
-        Mastodon: <a href="https://koyu.space/web/@dook" target="_blank" rel="noreferrer">@Dook</a>
+        Mastodon: <a href="https://post.lurk.org/@dook" target="_blank" rel="noreferrer">Dook@post.lurk.org</a>
         </div>
       </div>
 <div class="box-text small-padding-right">
        <img class="contacticons" src="/img/about/pixelfed.svg">
         <div class="contactlist">
-        Pixelfed: <a href="https://pixelfed.social/i/web/profile/320277370193973248" target="_blank" rel="noreferrer">@Dook@pixelfed.social</a>
+        Pixelfed: <a href="https://pixelfed.social/i/web/profile/320277370193973248" target="_blank" rel="noreferrer">Dook@pixelfed.social</a>
         </div>
       </div>
 <div class="box-text small-padding-right">
