optimising css file

--- a/about/now/index.html
+++ b/about/now/index.html
@@ -51,7 +51,7 @@
   
    
     <li>
-      <a class="active" href="/about/">
+      <a class="rounded" href="/about/">
         About
       </a>
     </li>
@@ -63,7 +63,7 @@
   </header>
 
  
- <body class="about">
+ <body class="about colours">
    <main class="no-top">
     <h1 class="title">Now</h1>
      <hr>
