--- a/about/setup/index.html
+++ b/about/setup/index.html
@@ -50,7 +50,7 @@
   
    
     <li>
-      <a class="active" href="/about/">
+      <a class="rounded" href="/about/">
         About
       </a>
     </li>
@@ -62,7 +62,7 @@
   </header>
 
  
- <body class="about">
+ <body class="about colours">
    <main class="no-top">
     <h1 class="title">Setup</h1>
      
