--- a/gallery/places/loughderg/index.html
+++ b/gallery/places/loughderg/index.html
@@ -22,7 +22,7 @@
   
    
     <li>
-      <a class="active" href="/gallery/">
+      <a class="rounded" href="/gallery/">
         Gallery
       </a>
     </li>
@@ -62,7 +62,7 @@
   </header>
 
  
- <body class="gallery">
+ <body class="gallery colours">
    <main class="no-top">
     <h1 class="title">Lough Derg</h1>
           
