--- a/journal/year-review-2021/index.html
+++ b/journal/year-review-2021/index.html
@@ -43,7 +43,7 @@
   
    
     <li>
-      <a class="active" href="/journal/">
+      <a class="rounded" href="/journal/">
         Journal
       </a>
     </li>
@@ -62,7 +62,7 @@
   </header>
 
  
- <body class="journal">
+ <body class="journal colours">
    <main class="no-top">
     <h1 class="title">Year Review 2021</h1>
           
