--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -37,7 +37,7 @@
   
    
     <li>
-      <a class="active" href="/knowledge/">
+      <a class="rounded" href="/knowledge/">
         Knowledge
       </a>
     </li>
@@ -63,7 +63,7 @@
   </header>
 
 
- <body class="knowledge">
+ <body class="knowledge colours">
   <main class="no-top">
 
    <h1>Knowledge</h1>
