--- a/knowledge/reusingtech/index.html
+++ b/knowledge/reusingtech/index.html
@@ -36,7 +36,7 @@
   
    
     <li>
-      <a class="active" href="/knowledge/">
+      <a class="rounded" href="/knowledge/">
         Knowledge
       </a>
     </li>
@@ -62,7 +62,7 @@
   </header>
 
   
- <body class="knowledge">
+ <body class="knowledge colours">
    <main class="no-top">
     <h1 class="title">Reusing Technology</h1>
           
