--- a/projects/index.html
+++ b/projects/index.html
@@ -30,7 +30,7 @@
   
    
     <li>
-      <a class="active" href="/projects/">
+      <a class="rounded" href="/projects/">
         Projects
       </a>
     </li>
@@ -63,7 +63,7 @@
   </header>
 
 
- <body class="projects">
+ <body class="projects colours">
   <main class="no-top">
 
    <h1>Projects</h1>
