--- a/projects/streetwalker/index.html
+++ b/projects/streetwalker/index.html
@@ -29,7 +29,7 @@
   
    
     <li>
-      <a class="active" href="/projects/">
+      <a class="rounded" href="/projects/">
         Projects
       </a>
     </li>
@@ -62,7 +62,7 @@
   </header>
 
    
- <body class="projects">
+ <body class="projects colours">
    <main class="no-top">
     <h1 class="title">Streetwalker</h1>
           
