--- a/gallery/experiments/index.html
+++ b/gallery/experiments/index.html
@@ -23,7 +23,7 @@
   
    
     <li>
-      <a class="active" href="/gallery/">
+      <a class="rounded" href="/gallery/">
         Gallery
       </a>
     </li>
@@ -63,7 +63,7 @@
   </header>
 
  
- <body class="gallery">
+ <body class="gallery colours">
   <main class="no-top">
 
    <h1>Experiments</h1>
