--- a/journal/index.html
+++ b/journal/index.html
@@ -44,7 +44,7 @@
   
    
     <li>
-      <a class="active" href="/journal/">
+      <a class="rounded" href="/journal/">
         Journal
       </a>
     </li>
@@ -63,7 +63,7 @@
   </header>
 
   
- <body class="journal">
+ <body class="journal colours">
   <main class="no-top">
   
   <h1>Journal</h1>
