Added pico8 list

--- a/about/bookmarks/index.html
+++ b/about/bookmarks/index.html
@@ -233,6 +233,11 @@
 	<li>
 	   <a href="https://lparchive.org/Dwarf-For" target="_blank" rel="noreferrer">∙ Dwarf Fortress: The story of Boatmurdered</a>.
 	</li>
+
+	<li>
+	   <a href="https://alwaysreadthemanual.com/read/issues/3/jeremy-keith/article.html" target="_blank" rel="noreferrer">∙ As we may link (about Hypertext)</a>.
+	</li>
+
 </ul>
 
 <h2 id="random-wikipedia-pages">Random Wikipedia Pages</h2>
