--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -74,7 +74,7 @@
      <a href="/knowledge/pico8-games/">
       <img src="/img/knowledge/pico8.png" loading="lazy" >
       <div>
-       <h2 class="small-margin-bottom">Pico-8 Games List</h2>
+       <h2 style="font-size:28px">Pico-8 Games List</h2>
        <p>An extensive list of the best (and my favourite) games for the Pico-8 system</p>
        </div>
        <hr>
@@ -85,7 +85,7 @@
      <a href="/knowledge/seedharvesting/">
       <img src="/img/knowledge/savingseeds01.jpg" loading="lazy" >
       <div>
-       <h2 class="small-margin-bottom">Seed Harvesting</h2>
+       <h2 style="font-size:28px">Seed Harvesting</h2>
        <p>A record of harvesting seeds, when to pick and how I store them.</p>
        </div>
        <hr>
@@ -96,7 +96,7 @@
      <a href="/knowledge/bees/">
       <img src="/img/knowledge/bees05.jpg" loading="lazy" >
       <div>
-       <h2 class="small-margin-bottom">Bee Encyclopedia</h2>
+       <h2 style="font-size:28px">Bee Encyclopedia</h2>
        <p>An Encylopedia of various Bees I&#39;ve spotted, and photgraphed.</p>
        </div>
        <hr>
@@ -107,7 +107,7 @@
      <a href="/knowledge/ipod_modding/">
       <img src="/img/knowledge/ipod_modding/ipod.svg" loading="lazy" >
       <div>
-       <h2 class="small-margin-bottom">iPod Modding</h2>
+       <h2 style="font-size:28px">iPod Modding</h2>
        <p>Collection of various guides and information on iPod software and hardware Modding</p>
        </div>
        <hr>
@@ -118,7 +118,7 @@
      <a href="/knowledge/reusingtech/">
       <img src="/img/knowledge/reusingtech02.jpg" loading="lazy" >
       <div>
-       <h2 class="small-margin-bottom">Reusing Technology</h2>
+       <h2 style="font-size:28px">Reusing Technology</h2>
        <p>Tips and Tricks about reusing technology in fun and useful ways.</p>
        </div>
        <hr>
@@ -129,7 +129,7 @@
      <a href="/knowledge/ecovillage/">
       <img src="/img/knowledge/ecovillage06.jpg" loading="lazy" >
       <div>
-       <h2 class="small-margin-bottom">Ecovillages</h2>
+       <h2 style="font-size:28px">Ecovillages</h2>
        <p>Record of my visit around Cloughjordan Ecovillage.</p>
        </div>
        <hr>
@@ -140,7 +140,7 @@
      <a href="/knowledge/origami/">
       <img src="/img/knowledge/origami_3.jpg" loading="lazy" >
       <div>
-       <h2 class="small-margin-bottom">Origami</h2>
+       <h2 style="font-size:28px">Origami</h2>
        <p>The art of folding paper into various forms and objects.</p>
        </div>
        <hr>
@@ -151,7 +151,7 @@
      <a href="/knowledge/trichrome/">
       <img src="/img/gallery/trichrome/summer/TC10.jpg" loading="lazy" >
       <div>
-       <h2 class="small-margin-bottom">Trichrome Technique</h2>
+       <h2 style="font-size:28px">Trichrome Technique</h2>
        <p>Detailed write-up on the Trichrome technique used to make colour images.</p>
        </div>
        <hr>
@@ -162,7 +162,7 @@
      <a href="/knowledge/beachfossils/">
       <img src="/img/knowledge/beachfossils_2.jpg" loading="lazy" >
       <div>
-       <h2 class="small-margin-bottom">Beach Fossils</h2>
+       <h2 style="font-size:28px">Beach Fossils</h2>
        <p>Information on the kinds of fossils that can be found on Beaches.</p>
        </div>
        <hr>
@@ -198,7 +198,7 @@
       <a href="https://github.com/D0-0K" target="_blank" alt="github">
         <svg viewBox="0 0 140 140" xmlns="http://www.w3.org/2000/svg" height="34" width="34"><path style="fill: var(--text);" d="M63.994.152C28.66.152 0 28.806 0 64.158c0 28.272 18.336 52.26 43.768 60.726 3.2.586 4.37-1.392 4.37-3.084 0-1.52-.06-5.544-.092-10.888-17.8 3.87-21.56-8.576-21.56-8.576-2.906-7.394-7.102-9.364-7.102-9.364-5.812-3.972.44-3.888.44-3.888 6.424.452 9.8 6.592 9.8 6.592 5.712 9.784 14.984 6.96 18.63 5.32.58-4.14 2.234-6.96 4.06-8.56-14.21-1.612-29.15-7.104-29.15-31.63 0-6.984 2.494-12.7 6.588-17.172-.66-1.62-2.856-8.12.628-16.932 0 0 5.374-1.72 17.6 6.56 5.104-1.42 10.58-2.128 16.02-2.152 5.44.024 10.914.734 16.024 2.154 12.22-8.28 17.58-6.56 17.58-6.56 3.496 8.81 1.3 15.316.64 16.936 4.104 4.476 6.58 10.19 6.58 17.174 0 24.586-14.966 30-29.22 31.58 2.296 1.98 4.34 5.88 4.34 11.854 0 8.556-.076 15.46-.076 17.56 0 1.706 1.154 3.7 4.4 3.074C109.68 116.396 128 92.42 128 64.156 128 28.808 99.344.152 63.994.152z"/></svg>
       </a>   
-      <div style="float: right;">
+      <div style="float:right;">
         <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>
       </div> 
    </footer>
