--- a/about/now/index.html
+++ b/about/now/index.html
@@ -66,26 +66,30 @@
    <main>
     <h1>Now</h1>
      <hr>
-    <h2 id="august-2022">August 2022</h2>
+    <h2 id="september-2022">September 2022</h2>
 
 
 <ul class="extra">
 <li>∘ Learning C with "Learning C for Pebble".</li>
 
-<li>∘ Working on an accessible version of my iPod theme for people with eyesight problems.</li>
+<li>∘ Started and finished a complete redesign of the website to it's final form.</li>
 
-<li>∘ Expanding the sight a little more.</li>
+<li>∘ Still working on an accessible version of my iPod theme for people with vision difficulties.</li>
 
-<li>∘ Start looking for a new home server on Mastodon.</li>
+<li>∘ Began writing a technical book for writing rockbox themes for ipods.</li>
+
+<li>∘ Starting taking some photos again.</li>
 </ul>
 
 <h2 id="whats-playing">What&rsquo;s Playing?</h2>
 
 
 <ul class="extra">
-<li>∘ Listening to Snail Mail a bunch.
+<li>∘ Currently Reading Yu Yu Hakusho.
 
-<li>∘ Currently reading Nausicaä of the Valley of the Wind.
+<li>∘ Listening to Black Focus by Yussef Kamaal.
+
+<li>∘ Started playing some games again.
 </ul>
 
 <p><a href="./2022">∙ now 2022</a></p>
